--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@babel/core": "^7.21.4",
+    "@heroicons/react": "^2.0.17",
     "@rainbow-me/rainbowkit": "^0.12.7",
     "daisyui": "^2.51.5",
     "ethers": "^5",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "usehooks-ts": "^2.9.1",
     "wagmi": "^0.12.10",
     "zod": "^3.21.4"
   },
