--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.21.4",
+    "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@rainbow-me/rainbowkit": "^0.12.7",
     "daisyui": "^2.51.5",
