--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@babel/core": "^7.21.4",
+    "@daobox/use-aragon": "0.0.5-beta.4",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@rainbow-me/rainbowkit": "^0.12.7",
+    "@tailwindcss/forms": "^0.5.3",
     "daisyui": "^2.51.5",
     "ethers": "^5",
     "next": "^13.2.4",
@@ -31,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
+    "encoding": "^0.1.13",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.21",
