update tsconig paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,15 @@
     "jsx": "preserve",
     "incremental": true,
     "noUncheckedIndexedAccess": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"]
+      "@styles/*": ["./styles/*"],
+      "@images/*": ["./images/*"],
+      "@components/*": ["./components/*"],
+      "@lib/*": ["./lib/*"],
+      "@hooks/*": ["./hooks/*"],
+      "@constants/*": ["./constants/*"],
+      "@utils/*": ["./utils/*"]
     }
   },
   "include": [
