added proposals page

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@babel/core": "^7.21.4",
-    "@daobox/use-aragon": "0.0.5-beta.4",
+    "@daobox/use-aragon": "0.0.5-beta.2",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@rainbow-me/rainbowkit": "^0.12.7",
     "@tailwindcss/forms": "^0.5.3",
+    "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
     "ethers": "^5",
+    "lodash": "^4.17.21",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.21.3",
+    "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
