--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.7",
     "usehooks-ts": "^2.9.1",
     "wagmi": "^0.12.10",
     "zod": "^3.21.4"
