added dummy data for proposals

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@babel/core": "^7.21.4",
     "@daobox/use-aragon": "0.0.5-beta.2",
+    "@ethersproject/bignumber": "^5.7.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@rainbow-me/rainbowkit": "^0.12.7",
     "@tailwindcss/forms": "^0.5.3",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
+    "dayjs": "^1.11.7",
     "ethers": "^5",
     "lodash": "^4.17.21",
     "next": "^13.2.4",
