--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
+    "next": "^13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "sharp": "^0.32.0",
     "truncate-eth-address": "^1.0.2",
     "@tremor/react": "^2.1.0",
     "daisyui": "^2.51.5",
     "ethers": "^5.7.0",
-    "next": "^13.0.0",
-    "react": "^18.2.0",
     "react-blockies": "^1.4.1",
-    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "usehooks-ts": "^2.9.1",
     "wagmi": "~0.12.10",
