--- a/package.json
+++ b/package.json
@@ -10,25 +10,30 @@
   },
   "dependencies": {
     "@babel/core": "^7.21.4",
-    "@daobox/use-aragon": "0.0.5-beta.2",
     "@ethersproject/bignumber": "^5.7.0",
+    "@aragon/osx-ethers": "^1.2.1",
+    "@aragon/sdk-client": "^1.4.0",
+    "@daobox/use-aragon": "0.0.5-beta.4",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
-    "@rainbow-me/rainbowkit": "^0.12.7",
+    "@rainbow-me/rainbowkit": "~0.12.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "classnames": "^2.3.2",
-    "daisyui": "^2.51.5",
     "dayjs": "^1.11.7",
-    "ethers": "^5",
     "lodash": "^4.17.21",
-    "next": "^13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "sharp": "^0.32.0",
     "truncate-eth-address": "^1.0.2",
+    "@tremor/react": "^2.1.0",
+    "daisyui": "^2.51.5",
+    "ethers": "^5.7.0",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-blockies": "^1.4.1",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "usehooks-ts": "^2.9.1",
-    "wagmi": "^0.12.10",
+    "wagmi": "~0.12.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -36,21 +41,23 @@
     "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "@iconify/react": "^4.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/react-blockies": "^1.4.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@wagmi/cli": "^0.1.14",
     "autoprefixer": "^10.4.14",
+    "clsx": "^1.2.1",
     "encoding": "^0.1.13",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "tailwindcss": "^3.3.0",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "tailwindcss": "^3.3.1",
     "typescript": "^5.0.2"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.10.3"
   }
 }
