--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "recharts": "^2.5.0",
     "sharp": "^0.32.0",
     "usehooks-ts": "^2.9.1",
     "wagmi": "~0.12.10",
