moved create proposal step to modal

--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
     "dayjs": "^1.11.7",
+    "draft-js": "^0.11.7",
     "ethers": "^5.7.0",
     "lodash": "^4.17.21",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "recharts": "^2.5.0",
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@iconify/react": "^4.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/draft-js": "^0.11.10",
     "@types/eslint": "^8.21.3",
     "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.5",
@@ -48,6 +51,7 @@
     "@types/react": "^18.0.28",
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "^18.0.11",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@wagmi/cli": "^0.1.14",
