--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
     "sharp": "^0.32.0",
     "usehooks-ts": "^2.9.1",
