--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@tremor/react": "^2.1.0",
+    "alchemy-sdk": "^2.8.1",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
     "dayjs": "^1.11.7",
