--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@lens-protocol/react-web": "^1.0.1",
     "@lens-protocol/wagmi": "^1.0.1",
+    "@lens-protocol/widgets-react": "^0.0.11",
     "@rainbow-me/rainbowkit": "~0.12.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
@@ -37,6 +38,8 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
+    "react-social-icons": "^5.15.0",
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
     "sharp": "^0.32.0",
@@ -45,7 +48,6 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "next-transpile-modules": "^10.0.0",
     "@iconify/react": "^4.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/draft-js": "^0.11.10",
@@ -65,6 +67,7 @@
     "encoding": "^0.1.13",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
+    "next-transpile-modules": "^10.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7",
