--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "draft-js": "^0.11.7",
     "ethers": "^5.7.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-moment": "^1.1.3",
     "react-social-icons": "^5.15.0",
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
