--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@lens-protocol/react-web": "^1.0.1",
     "@lens-protocol/wagmi": "^1.0.1",
     "@lens-protocol/widgets-react": "^0.0.11",
+    "@mailchain/sdk": "^0.19.1",
     "@rainbow-me/rainbowkit": "~0.12.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
