--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "format": "npx prettier --write ./src/"
   },
   "dependencies": {
     "@aragon/osx-ethers": "^1.2.1",
@@ -28,6 +29,7 @@
     "alchemy-sdk": "2.8.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "cors": "^2.8.5",
     "daisyui": "^2.51.5",
     "dayjs": "^1.11.7",
     "draft-js": "^0.11.7",
