--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # When adding additional environment variables, the schema in "/src/env.mjs"
 # should be updated accordingly.
 
-# NEXT_PUBLIC_ALCHEMY_ID=""
-# NEXT_PUBLIC_WEB_3_STORAGE_KEY
+# NEXT_PUBLIC_ALCHEMY_ID=
+# NEXT_PUBLIC_WEB_3_STORAGE_KEY=
+# NEXT_PUBLIC_POLYGONSCAN_API_KEY=
+# NEXT_PUBLIC_COINMARKETCAP_API_KEY=
